Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
4.6.0
-
None
-
MacOS/X Snow Leopard
-
77230f7ec9e78ec2d57629ea934ceb1d59eb391e, 90dfb5e5d8fc8cb841b0762cd88aa4b996c38312
Description
To reproduce:
1) On a Mac, compile Qt 4.6.0 (release version) with flags "-no-qt3support -cocoa".
2) Run the examples/widgets/lineedits program
3) Click on one of the line edits to give it the focus (and blinking text caret)
4) Press return
5) Hear the system beep every time return is pressed... annoying!
The system beep is also heard whenever you press up or down arrow key, PageUp, PageDown, Home, End, or a Function Key. Also, if you press Insert, the mouse pointer turns into a question mark, and then if you click on the text in the QLineEdit, it beeps.
Attachments
Issue Links
- is required for
-
QTCREATORBUG-367 Issues when building Qt and Creator with Cocoa
-
- Closed
-